Use meta to operate on a set of all plugins.
Signed-off-by: dblock <dblock@amazon.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
+/alerting-dashboards-plugin/
+/alerting/
+/anomaly-detection-dashboards-plugin/
+/anomaly-detection/
+/asynchronous-search/
+/dashboards-notebooks/
+/dashboards-reports/
+/dashboards-visualizations/
+/index-management-dashboards-plugin/
+/index-management/
+/job-scheduler/
+/k-nn/
+/notifications/
+/performance-analyzer/
+/security-dashboards-plugin/
+/security/
+/sql/
+/trace-analytics/
 /node_modules/
