Combined plugin projects.
Signed-off-by: dblock <dblock@amazon.com>

--- a/plugins/.gitignore
+++ b/plugins/.gitignore
@@ -1,13 +1,14 @@
-/job-scheduler/
-/anomaly-detection/
 /alerting/
 /anomaly-detection/
 /asynchronous-search/
+/dashboards-notebooks/
+/dashboards-reports/
+/dashboards-visualizations/
 /index-management/
 /job-scheduler/
 /k-nn/
-/notebooks/
 /performance-analyzer/
-/reports-scheduler/
 /security/
+/security-dashboards-plugin/
 /sql/
+/trace-analytics/
