--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /anomaly-detection-dashboards-plugin/
 /anomaly-detection/
 /asynchronous-search/
+/common-utils/
 /dashboards-reports/
 /dashboards-visualizations/
 /index-management-dashboards-plugin/
