--- a/plugins/.gitignore
+++ b/plugins/.gitignore
@@ -1,6 +1,7 @@
 /alerting/
 /anomaly-detection/
 /asynchronous-search/
+/common-utils/
 /dashboards-reports/
 /dashboards-visualizations/
 /index-management/
