Add missing plugins to meta
Signed-off-by: Sayali Gaikawad <gaiksaya@amazon.com>

--- a/dashboards-plugins/.gitignore
+++ b/dashboards-plugins/.gitignore
@@ -1,10 +1,13 @@
-alertingDashboards/
-anomalyDetectionDashboards/
-ganttChartDashboards/
-indexManagementDashboards/
-notificationsDashboards/
 queryWorkbenchDashboards/
-reportsDashboards/
+alertingDashboards/
+notificationsDashboards/
 securityDashboards/
-traceAnalyticsDashboards/
-dashboards-maps/
+indexManagementDashboards/
+anomalyDetectionDashboards/
+reportsDashboards/
+observabilityDashboards/
+ganttChartDashboards/
+searchRelevanceDashboards/
+customImportMapDashboards/
+securityAnalyticsDashboards/
+mlCommonsDashboards/
