Update list of plugins.
Signed-off-by: dblock <dblock@amazon.com>

--- a/plugins/.gitignore
+++ b/plugins/.gitignore
@@ -1,23 +1,22 @@
+/common-utils/
 /alerting/
 /anomaly-detection/
 /asynchronous-search/
-/common-utils/
-/dashboards-reports/
-/dashboards-visualizations/
+/cross-cluster-replication/
+/custom-codecs/
+/flow-framework/
+/geospatial/
 /index-management/
 /job-scheduler/
-/k-nn/
-/performance-analyzer/
-/performance-analyzer-rca/
-/security/
-/sql/
-/trace-analytics/
-/observability/
-/cross-cluster-replication/
+/k-NN/
 /ml-commons/
-/opensearch-oci-object-storage/
 /neural-search/
-/geospatial/
 /notifications/
+/observability/
+/opensearch-oci-object-storage/
+/reporting/
+/performance-analyzer/
 /security-analytics/
-/flow-framework/
+/security/
+/skills/
+/sql/
